# LCH-Farrow

./: .cursorrules  CLAUDE.md  CMakeLists.txt  CMakeLists.win_01_10_15  CMakePresets.universal.json.backup  CMakePresets.windows  CMakePresets_WINDOWS_README.md  Project_map.md  README.md  README_SETUP.md  run_log.txt  test_duration_formula.cpp
.cache/clangd/index/: filter_bank.cpp.4B66382A85479162.idx  filter_bank.h.5FB4B64E19F04689.idx  gpu_factory.cpp.F9A8BE15AC947E46.idx  gpu_factory.h.91338CE70DECCB3A.idx  igpu_backend.h.5C9895C4003EC6C3.idx  lagrange_matrix.cpp.77C082F7541E6A50.idx  lagrange_matrix.h.61B8520DC661EFAD.idx  lfm_signal_generator.cpp.D82A7825EB2DFBB7.idx  lfm_signal_generator.h.94CDBC5C5F110B38.idx  main.cpp.26DBBAF2361CFAAF.idx  mylib.cpp.ECDF872B1FF717AC.idx  mylib.h.E4794AE9B83EAEFB.idx  opencl_backend.cpp.E2C0085052F978A1.idx  opencl_backend.h.F9AF487D692DF78F.idx  processing_pipeline.cpp.E1E421AF2772F4B8.idx  processing_pipeline.h.FD083AB9D2699DCB.idx  profiling_engine.cpp.8963A3C0F0EA8615.idx  profiling_engine.h.F88701C9E689245A.idx  signal_buffer.cpp.2E515EB413C08440.idx  signal_buffer.h.E6EED301312D8385.idx
Doc/: BUILD_CHIRP.sh  DEBUG_FRACTIONAL_DELAY.md  FRACTIONAL_DELAY_GPU.md  FRACTIONAL_DELAY_ROUTE.md  LFM_Signal_Analysis (1).md  LFM_Signal_Analysis.md  farrow_chirp_host.cpp  farrow_coeffs_48x5_sample.txt  ~! Команбы для AI.md  ~readme.txt
Doc/AI/: 1-2 файлы.md  DOCUMENTATION_COMPLETE.txt  START_HERE_5MIN.md  multi_gpu_strategy.md  📦 __ВСЕ 9 ФАЙЛОВ - ТЕКСТ ДЛЯ КОПИРОВАНИЯ__.md  📦 __ОСТАЛЬНЫЕ 6 ФАЙЛОВ - ТЕКСТ ДЛЯ КОПИРОВАНИЯ__.md
Doc/CMake/: CMakeLists.txt  CMakePresets.txt_json  build.bat  build.sh  cmake-config-system.md  cmake-crossplatform.md  cmake-universal.md  cmake_gpu_support.md  coding-workflow.md  fix-issues.md  run.sh  start-bat-guide.md  your-config-analysis.md  ~Command_Build.txt
Doc/Example/: lagrange_matrix.json  lagrange_matrix_48x5.md  lfm_signal_generat.txt  opencl_fractional_delay_256beams.cpp
Doc/GeneratorGPU/1/: GeneratorGPU_README.md  generator_gpu.cpp  kernels_generator.cl
Doc/GeneratorGPU/2/: ComplexVector_README.md  SEQUENTIAL_THINKING_ANALYSIS.md  complex_vector.h  example_complex_vector.cpp
Doc/GeneratorGPU/error 11/: FIX_ERROR_11.md  QUICK_FIX_CHECKLIST.md  generator_gpu_FIXED.cpp  generator_gpu_FIXED.h
Doc/LFM_01_10_16/: LFM_ANGLE_DELAY_THEORY.md  LFM_CODE_IMPLEMENTATION.md  LFM_PYTHON_EXAMPLES.md  LFM_SUMMARY_AND_PLAN.md
Doc/LFM_01_10_20/: 00_START_HERE.md  CLARIFICATION_QUESTIONS.md  COMPLETION_REPORT.md  FILES_OVERVIEW.md  FINAL_CHECKLIST.md  INDEX.md  LFM_ANGLE_ARRAY_V2.md  ONE_PAGE_SUMMARY.md  QUICK_START.md  README_FINAL.md  SOLUTION_FINAL.md  SUMMARY_TABLE.md
Doc/LFM_01_10_22/: lfm_signal_generator_p3.cpp  lfm_signal_generator_p3.h  main_p3.cpp
Doc/OpenCL Singleton/: OpenCL Singleton Manager (1).html  OpenCL Singleton Manager.html  OpenCL-Singleton-Manager.md  example_opencl_singleton.cpp  generator_gpu_refactored.cpp  generator_gpu_refactored.h
Doc/Plan/: 00_ОБЩИЙ_ПЛАН.md  01_ДЕТАЛЬНЫЙ_ПЛАН.md  02_CPU_GPU_дробная_задержка.md  Plan_2025_01_04_01.txt
Doc/Plan/2025_01_12/: План01.txt
Doc/Plan/Start/: FINAL_SUMMARY.md  INDEX.md  QUICK_COMMANDS.sh  README_START_HERE.md  common_pitfalls_solutions.md  final_architecture_with_fft.md  quick_reference_guide.md
Doc/Signal_buff/: CHANGES.md  DOWNLOAD-FILES.md  INDEX (1).md  README.md  architecture-comparison.md  quick-reference.md  refactoring-summary.md  usage-examples.md  verification-checklist.md
Doc/Signal_buff/Example/: ATLAS_REPORT.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  FINAL_SUMMARY.md  lfm_signal_generator.cpp  lfm_signal_generator.~h  main.~cpp  signal_buffer.~cpp  signal_buffer.~h
Doc/clFFT/: readme_clFFT.txt
Doc/old/: COEFFICIENT_FORMAT.md  QUICK_START.md  farrow_chirp_advanced.cl
Doc/Гетеродин/AMD/: opencl_impl_guide.md  radar_fft_optimization.md
Results/: rezult_test_gpu.md
Results/JSON/: profile_report.json  profile_report_2026-01-04_17-32-55.json  profile_report_2026-01-04_17-43-50.json  profile_report_2026-01-04_18-00-04.json  profile_report_2026-01-10_10-51-14.json  profile_report_2026-01-10_11-39-18.json
examples/: CMakeLists.txt  fractional_delay_gpu_example.cpp
include/: application.h  data_validator.h  filter_bank.h  fractional_delay_cpu.h  fractional_delay_gpu.h  gpu_kernel.h  gpu_processor.h  gpu_profiling.h  interpolation_matrix.h  lagrange_matrix.h  lfm_signal_generator.h  processing_pipeline.h  profiling_engine.h  report_manager.h  reporter.h  result_comparator.h  signal_buffer.h  signal_generator_new.h
include/CL/: cl.hpp
include/OLD/: lfm_signal_generator.~cpp
include/OLD01/: lfm_signal_generator.~h  main.~cpp
include/examples/: example_complex_vector.h  example_opencl_singleton.h
include/generator/: generator_gpu.h
include/gpu/: opencl_manager.h
include/gpu_backend/: gpu_factory.h  igpu_backend.h  opencl_backend.h
kernels/: kernel_fractional_delay.cl  kernel_hadamard.cl
src/: application.cpp  application.h  complex_vector.cpp  data_validator.cpp  filter_bank.cpp  fractional_delay_cpu.cpp  fractional_delay_gpu.cpp  gpu_kernel.cu  gpu_processor.cpp  gpu_profiling.cpp  lagrange_matrix.cpp  lfm_signal_generator.cpp  main.cpp  processing_pipeline.cpp  profiling_engine.cpp  report_manager.cpp  reporter.cpp  result_comparator.cpp  signal_buffer.cpp  signal_generator.cpp  signal_generator.h  signal_generator_new.cpp  validator.cpp  validator.h  ~main._old_cpp
src/generator/: example_generator_gpu.~cpp  example_opencl_singleton.~cpp  generator_gpu.cpp
src/gpu/: opencl_manager.cpp
src/gpu_backend/: gpu_factory.cpp  opencl_backend.cpp
tests/: test_noise_signal.cpp
